bo-archival/force-app/main/default/objects/Case__b/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>