bo-archival/force-app/main/default/objects/Case__b/fields/CaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CaseNumber__c</fullName>
    <label>Case Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>