bo-archival/force-app/main/default/objects/Case__b/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>ClosedDate</label>
    <type>DateTime</type>
</CustomField>