bo-archival/force-app/main/default/objects/Case__b/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>ContactId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>