bo-archival/force-app/main/default/objects/Case__b/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>