bo-archival/force-app/main/default/objects/Case__b/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <label>IsEscalated</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>