bo-archival/force-app/main/default/objects/Case__b/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>