bo-archival/force-app/main/default/objects/Case__b/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>