bo-archival/force-app/main/default/objects/Case__b/fields/SuppliedEmail__c.field-meta.xml
<CustomField>
    <fullName>SuppliedEmail__c</fullName>
    <label>Supplied Email</label>
    <type>Email</type>
</CustomField>