bo-archival/force-app/main/default/objects/Case__b/fields/SuppliedName__c.field-meta.xml
<CustomField>
    <fullName>SuppliedName__c</fullName>
    <label>Supplied Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>