bo-archival/force-app/main/default/objects/Case__b/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <label>Supplied Phone</label>
    <type>Phone</type>
</CustomField>